# sigfox-ep-rf-api-semtech-lr11xx

./: CHANGELOG.md  CMakeLists.txt  README.md
cmake/: lr11xx.patch  precompile_lr11xx_rf_api.cmake
inc/board/: lr11xx_hw_api.h
inc/manuf/: lr11xx_rf_api.h  smtc_sigfox_lr11xx.h
src/board/: lr11xx_hal.c  lr11xx_hw_api.c
src/manuf/: lr11xx_rf_api.c
